--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Index.cshtml
@@ -84,7 +84,7 @@
                                     <div class="col-sm-3">
                                         <strong>Nombre:</strong>
                                         <select id="ddlUser" name="IdUsuario" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
-                                            <option value="0">Seleccione uno</option>
+                                            <option value="-1">Seleccione uno</option>
                                             @foreach (var lst in ViewBag.ListaUsuarios)
                                             {
                                                 <option value="@lst.IdUsuario">@lst.Nombre</option>
@@ -118,6 +118,21 @@
                                 </div>
                             </div>
                         </div>
+                        @if (ViewBag.MessageError != null)
+                {
+                            <div class="row clearfix">
+                                <div id="divMensajeError" class="container">
+                                    <div class="alert alert-danger">
+                                        <div class="alert-icon">
+                                            <i class="zmdi zmdi-block"></i>
+                                        </div>
+                                        <strong>
+                                            <label>@ViewBag.MessageError</label>
+                                        </strong>
+                                    </div>
+                                </div>
+                            </div>
+                        }
                         <br />
                         <div class="row clearfix">
                             <div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
@@ -170,7 +185,7 @@
 
                     </div>
                 </div>
-                @if (ViewBag.MessageError != null)
+                @*@if (ViewBag.MessageError != null)
                 {
                     <div class="row clearfix">
                         <div id="divMensajeError" class="container">
@@ -184,7 +199,7 @@
                             </div>
                         </div>
                     </div>
-                }
+                }*@
             </div>
         </div>
     </section>
