--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
@@ -300,8 +300,17 @@
                                         <select id="ddlPais" name="IdPais" class="form-control selectpicker z-index show-tick">
                                             @foreach (var lst in ViewBag.ListaPaises)
                                             {
-                                                <option value="@lst.IdPais">@lst.Pais</option>
-                                            }
+                                              
+                                                    if (ViewBag.IdUser[0].IdPais == lst.IdPais)
+                                                    {
+                                                        <option value="@lst.IdPais" selected>@lst.Pais</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="@lst.IdPais">@lst.Pais</option>
+                                                    }
+                                                }
+                                              
                                         </select>
                                     </div>
                                 </div>
@@ -309,12 +318,23 @@
                                     <div class="form-group">
                                         <label for="ddlEdo">
                                             Estado:*
-                                        </label><input type="text" name="EstadoProvincia" style="display:none" id="txtEdoP" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].EstadoProvincia)" />
+                                            </label><input type="text" name="EstadoProvincia" style="display:none" id="txtEdoP" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].EstadoProvincia)" />
+                                       
 
                                         <select name="IdEstadoRep" id="ddlEdo" class="form-control selectpicker z-index show-tick" data-live-search="true">
-                                            @foreach (var lst in ViewBag.ListaEstados)
+                                            @foreach (var lst2 in ViewBag.ListaEstados)
                                             {
-                                                <option value="@lst.IdEstadoRep">@lst.Estado</option>
+                                                
+                                                if (ViewBag.IdUser[0].IdEstadoRep == lst2.IdEstadoRep)
+                                                {
+                                                    <option value="@lst2.IdEstadoRep" selected>@lst2.Estado</option>
+                                                    }
+                                                    else
+                                                    {
+                                                    <option value="@lst2.IdEstadoRep">@lst2.Estado</option>
+                                                    }
+                                                }
+                                                
                                             }
                                         </select>
                                     </div>
