--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <link href="~/Resources/css/CreateForm.css" rel="stylesheet" />
+*@using (Html.BeginForm((ViewBag.IdUser == null) ? "GuardarUsuario" : "GuardaEdicionUsuario", "Usuarios", FormMethod.Post))
 
-@using (Html.BeginForm((ViewBag.IdUser == null) ? "GuardarUsuario" : "GuardaEdicionUsuario", "Usuarios", FormMethod.Post))
 {
     <section class="content home">
         <div class="container-fluid">
@@ -298,9 +298,18 @@
                                             País:*
                                         </label>
                                         <select id="ddlPais" name="IdPais" class="form-control selectpicker z-index show-tick">
-                                            @foreach (var lst in ViewBag.ListaPaises)
+                                            @if (ViewBag.IdUser == null)
                                             {
-                                              
+                                                foreach (var lst in ViewBag.ListaPaises)
+                                                {
+                                                    <option value="@lst.IdPais">@lst.Pais</option>
+                                                }
+                                            }
+                                            else
+                                            {
+                                                foreach (var lst in ViewBag.ListaPaises)
+                                                {
+
                                                     if (ViewBag.IdUser[0].IdPais == lst.IdPais)
                                                     {
                                                         <option value="@lst.IdPais" selected>@lst.Pais</option>
@@ -310,7 +319,8 @@
                                                         <option value="@lst.IdPais">@lst.Pais</option>
                                                     }
                                                 }
-                                              
+                                            }
+
                                         </select>
                                     </div>
                                 </div>
@@ -318,24 +328,35 @@
                                     <div class="form-group">
                                         <label for="ddlEdo">
                                             Estado:*
-                                            </label><input type="text" name="EstadoProvincia" style="display:none" id="txtEdoP" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].EstadoProvincia)" />
-                                       
+                                        </label><input type="text" name="EstadoProvincia" style="display:none" id="txtEdoP" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].EstadoProvincia)" />
+
 
                                         <select name="IdEstadoRep" id="ddlEdo" class="form-control selectpicker z-index show-tick" data-live-search="true">
-                                            @foreach (var lst2 in ViewBag.ListaEstados)
-                                            {
-                                                
-                                                if (ViewBag.IdUser[0].IdEstadoRep == lst2.IdEstadoRep)
-                                                {
-                                                    <option value="@lst2.IdEstadoRep" selected>@lst2.Estado</option>
-                                                    }
-                                                    else
-                                                    {
+                                              @if (ViewBag.IdUser == null)
+                                              {
+                                                  foreach (var lst2 in ViewBag.ListaEstados)
+                                                  {
                                                     <option value="@lst2.IdEstadoRep">@lst2.Estado</option>
                                                     }
+                                              }
+                                              else
+                                                {
+                                                    foreach (var lst2 in ViewBag.ListaEstados)
+                                                    {
+
+                                                        if (ViewBag.IdUser[0].IdEstadoRep == lst2.IdEstadoRep)
+                                                        {
+                                                            <option value="@lst2.IdEstadoRep" selected>@lst2.Estado</option>
+                                                        }
+                                                        else
+                                                        {
+                                                            <option value="@lst2.IdEstadoRep">@lst2.Estado</option>
+                                                        }
+                                                    }
                                                 }
-                                                
-                                            }
+
+
+                                              
                                         </select>
                                     </div>
                                 </div>
