--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/Error.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/Error.cshtml
@@ -19,8 +19,8 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="card text-center">
                     <div class="body">
-                        <h1>Ups.. Algo a salido mal!!</h1>
-                        <h5>La pagina que estas buscando no se encuentra</h5>
+                        <h1>Ups.. Algo ha salido mal!!</h1>
+                        <h5>La página que estás buscando no se encuentra</h5>
                     </div>
                 </div>
             </div>
