cjal-15/11/2018 avance issue alta Empresa

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
@@ -172,7 +172,7 @@
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="title" id="ModalConfirmacionLabel">¿Esta seguro?</h4>
+                    <h4 class="title" id="ModalConfirmacionLabel">¿Está seguro?</h4>
                 </div>
                 <div class="modal-footer">
                     <input type="button" id="btnEliminar" value="Si" class="btn btn-raised btn-primary btn-round waves-effect" />
