--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Nueva.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Nueva.cshtml
@@ -18,17 +18,24 @@
                 $('#ddlEdo').parent().show();
                 $('#txtEdoP').hide();
             }
-
         });
-
   });
 </script>
-@using (Html.BeginForm((ViewBag.Empresas == null) ? "Crear" : "GuardaEdicionEmpresa", "Empresas", FormMethod.Post, new { enctype = "multipart/form-data" }))
+<script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+<script src="~/assets/js/pages/ui/notifications.js"></script>
+<script type="text/javascript">
+    var message = '@ViewBag.Msj';
+    var tipo = '@ViewBag.Tipo';
+    if (message != '') {
+        $(window).on("load", showNotification(tipo, message, 'top', 'center', '', ''));
+    }
+</script>
+@using (Html.BeginForm((ViewBag.EsEdicion == null) ? "Crear" : "GuardaEdicionEmpresa", "Empresas", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <section class="content home">
         <div class="container-fluid">
             <div class="block-header">
-
+               
                 <div class="row clearfix">
                     <div class="col-lg-5 col-md-5 col-sm-12">
                         <h2>Gaseras</h2>
@@ -36,7 +43,7 @@
                             <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
                             <li class="breadcrumb-item">Catálogo</li>
                             <li class="breadcrumb-item">Gasera</li>
-                            @if (ViewBag.Empresas == null)
+                            @if (ViewBag.EsEdicion == null)
                             {
                                 <li class="breadcrumb-item">Nueva</li>
                             }
@@ -63,9 +70,10 @@
                                                     <label for="txtNomC">
                                                         Nombre Comercial:*
                                                     </label>
-                                                    <input id="NombreComercial" type="text" name="NombreComercial" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].NombreComercial)" />
-                                                    <input id="IdEmpresa" type="text" name="IdEmpresa" hidden="hidden" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].IdEmpresa)" />
-                                                    @Html.ValidationMessageFor(m => m.NombreComercial, "", new { @class = "alert-danger" })
+                                                    @*<input id="NombreComercial" type="text" name="NombreComercial" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].NombreComercial)" />*@
+                                                    <input id="IdEmpresa" type="text" name="IdEmpresa" hidden="hidden" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].IdEmpresa)" />                                                    
+                                                    @Html.TextBoxFor(m => m.NombreComercial, new { @class = "form-control", @placeholder = "Nombre Comercial" })                                                  
+                                                     @Html.ValidationMessageFor(m => m.NombreComercial, "", new { @class = "alert-danger" })
                                                 </div>
                                             </div>
                                         </div>
@@ -89,7 +97,8 @@
                                                 <label for="txtRazonS">
                                                     Razón Social:*
                                                 </label>
-                                                <input type="text" name="RazonSocial" id="txtRazonS" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].RazonSocial)" />
+                                                @*<input type="text" name="RazonSocial" id="txtRazonS" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].RazonSocial)" />*@
+                                                @Html.TextBoxFor(m => m.RazonSocial, new { @class = "form-control", @placeholder = "Razón Social" })
                                                 @Html.ValidationMessageFor(m => m.RazonSocial, "", new { @class = "alert-danger" })
                                             </div>
                                         </div>
@@ -99,7 +108,8 @@
                                             <label for="txtRfc">
                                                 RFC:*
                                             </label>
-                                            <input type="text" name="Rfc" id="txtRfc" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].Rfc)" />
+                                            @*<input type="text" name="Rfc" id="txtRfc" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].Rfc)" />*@
+                                            @Html.TextBoxFor(m => m.Rfc, new { @class = "form-control", @placeholder = "RFC" })
                                             @Html.ValidationMessageFor(m => m.Rfc, "", new { @class = "alert-danger" })
                                         </div>
                                     </div>
@@ -379,7 +389,7 @@
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <div class="form-group">
-                                @if (@ViewBag.Empresas == null)
+                                @if (@ViewBag.EsEdicion == null)
                                 {
                                     <input type="submit" value="Crear" formaction="Crear" formmethod="post" class="btn btn-raised btn-primary btn-round float-right" />
                                 }
