--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaCredenciales.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaCredenciales.cshtml
@@ -54,16 +54,16 @@
                                         <div class="form-group">
                                             <div class="col-lg-12 col-md-12 col-sm-12">
                                                 <div>
-                                                    <input id="Nombre" type="text" name="Nombre" readonly="readonly" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Nombre + " " +ViewBag.IdUser[0].Apellido1 + " " +ViewBag.IdUser[0].Apellido2 )" />
-                                                    <input type="text" name="IdUsuario" hidden="hidden" value="@ViewBag.IdUser[0].IdUsuario" readonly="readonly" id="IdUsuario" class="form-control" />
-                                                    <input type="text" name="Nombre" hidden="hidden" value="@ViewBag.IdUser[0].Nombre" readonly="readonly" class="form-control" />
-                                                    <input type="text" name="Apellido1" hidden="hidden" value="@ViewBag.IdUser[0].Apellido1" readonly="readonly" class="form-control" />
-                                                    <input type="text" name="IdPais" hidden="hidden" value="@ViewBag.IdUser[0].IdPais" readonly="readonly" class="form-control" />
-                                                    <input type="text" name="Municipio" hidden="hidden" value="@ViewBag.IdUser[0].Municipio" readonly="readonly" lass="form-control" />
-                                                    <input type="text" name="CodigoPostal" hidden="hidden" value="@ViewBag.IdUser[0].CodigoPostal" readonly="readonly" class="form-control" />
-                                                    <input type="text" name="Colonia" hidden="hidden" value="@ViewBag.IdUser[0].Colonia" readonly="readonly" class="form-control" />
-                                                    <input type="text" name="Calle" hidden="hidden" value="@ViewBag.IdUser[0].Calle" readonly="readonly" class="form-control" />
-                                                    <input type="text" name="NumExt" hidden="hidden" value="@ViewBag.IdUser[0].NumExt" readonly="readonly" class="form-control" />
+                                                    <input id="Nombre" type="text" name="Nombre" readonly="readonly" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser.Nombre + " " +ViewBag.IdUser.Apellido1 + " " +ViewBag.IdUser.Apellido2 )" />
+                                                    <input type="text" name="IdUsuario" hidden="hidden" value="@ViewBag.IdUser.IdUsuario" readonly="readonly" id="IdUsuario" class="form-control" />
+                                                    <input type="text" name="Nombre" hidden="hidden" value="@ViewBag.IdUser.Nombre" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="Apellido1" hidden="hidden" value="@ViewBag.IdUser.Apellido1" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="IdPais" hidden="hidden" value="@ViewBag.IdUser.IdPais" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="Municipio" hidden="hidden" value="@ViewBag.IdUser.Municipio" readonly="readonly" lass="form-control" />
+                                                    <input type="text" name="CodigoPostal" hidden="hidden" value="@ViewBag.IdUser.CodigoPostal" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="Colonia" hidden="hidden" value="@ViewBag.IdUser.Colonia" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="Calle" hidden="hidden" value="@ViewBag.IdUser.Calle" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="NumExt" hidden="hidden" value="@ViewBag.IdUser.NumExt" readonly="readonly" class="form-control" />
                                                 </div>
                                             </div>
                                         </div>
