--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
@@ -148,13 +148,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="80dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/efectivo"
                 android:textSize="18sp"
                 android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@+id/ETPuntoVentaPagarActivityEfectivo"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.55"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/SPuntoVentaPagarActivityFactura" />
 
@@ -167,7 +167,7 @@
                 android:autofillHints=""
                 android:ems="10"
                 android:inputType="numberDecimal"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/BtnPuntoVentaPagarActivityConfirmar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -179,10 +179,10 @@
 
             <Button
                 android:id="@+id/BtnPuntoVentaPagarActivityOpciones"
+                style="@style/SagasTheme.Button"
                 android:layout_width="94dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                style="@style/SagasTheme.Button"
+                android:layout_marginTop="57dp"
                 android:background="@drawable/ripple_effect"
                 android:text="@string/opciones"
                 android:textColor="@color/colorTextButtonLogin"
@@ -190,15 +190,15 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/BtnPuntoVentaPagarActivityCancelar"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView32"
+                app:layout_constraintTop_toBottomOf="@+id/SPuntoVentaPagarActivityFactura"
                 tools:ignore="UnusedAttribute" />
 
             <Button
                 android:id="@+id/BtnPuntoVentaPagarActivityCancelar"
+                style="@style/SagasTheme.Button"
                 android:layout_width="97dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                style="@style/SagasTheme.Button"
                 android:background="@drawable/ripple_effect"
                 android:text="@string/message_cancel"
                 android:textColor="@color/colorTextButtonLogin"
@@ -206,8 +206,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/BtnPuntoVentaPagarActivityConfirmar"
                 app:layout_constraintStart_toEndOf="@+id/BtnPuntoVentaPagarActivityOpciones"
-                app:layout_constraintTop_toBottomOf="@+id/ETPuntoVentaPagarActivityEfectivo"
-                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintTop_toBottomOf="@+id/textView30"
+                app:layout_constraintVertical_bias="1.0"
                 tools:ignore="UnusedAttribute" />
             <!--android:backgroundTint="@color/colorButtonLogin"-->
 
