--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/punto_venta_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/punto_venta_item.xml
@@ -2,20 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <android.support.v7.widget.CardView
         android:id="@+id/CVEstacionesCarburacionItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="1dp"
-        app:cardElevation="2dp"
-        android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
-        app:cardUseCompatPadding="true"
-        android:focusable="true">
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardElevation="2dp"
+        app:cardUseCompatPadding="true">
+
         <android.support.v7.widget.GridLayout
+            android:id="@+id/Grid"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
