--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/punto_venta_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/punto_venta_item.xml
@@ -2,74 +2,78 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <android.support.v7.widget.CardView
         android:id="@+id/CVEstacionesCarburacionItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="1dp"
-        app:cardElevation="2dp"
-        android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
-        app:cardUseCompatPadding="true"
-        android:focusable="true">
-    <android.support.v7.widget.GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardElevation="2dp"
+        app:cardUseCompatPadding="true">
 
-        <TextView
-            android:id="@+id/PuntoVentaGasListaActivityCantidadExistencia"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            app:layout_column="1"
-            app:layout_gravity="fill"
-            app:layout_row="2" />
+        <android.support.v7.widget.GridLayout
+            android:id="@+id/Grid"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/PuntoVentaGasListActivityExistencia"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/existencia"
-            android:textAlignment="center"
-            android:textSize="14sp"
-            app:layout_column="0"
-            app:layout_gravity="fill"
-            app:layout_row="2" />
+            <TextView
+                android:id="@+id/PuntoVentaGasListaActivityCantidadExistencia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                app:layout_column="1"
+                app:layout_gravity="fill"
+                app:layout_row="2" />
 
-        <EditText
-            android:id="@+id/ETPuntoVentaGasListActivityCantidad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:textSize="18sp"
-            app:layout_column="2"
-            app:layout_gravity="fill"
-            app:layout_row="2"
-            tools:ignore="Autofill,LabelFor" />
+            <TextView
+                android:id="@+id/PuntoVentaGasListActivityExistencia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/existencia"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                app:layout_column="0"
+                app:layout_gravity="fill"
+                app:layout_row="2" />
 
-        <TextView
-            android:id="@+id/PuntoVentaGasListActivityTituloCantidad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cantidad_venta"
-            android:textAlignment="center"
-            android:textSize="14sp"
-            app:layout_column="2"
-            app:layout_gravity="fill"
-            app:layout_row="1" />
+            <EditText
+                android:id="@+id/ETPuntoVentaGasListActivityCantidad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:textSize="18sp"
+                app:layout_column="2"
+                app:layout_gravity="fill"
+                app:layout_row="2"
+                tools:ignore="Autofill,LabelFor" />
 
-        <TextView
-            android:id="@+id/PuntoVentaGasListaActivityTipoGas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            app:layout_column="0"
-            app:layout_columnSpan="2"
-            app:layout_gravity="fill"
-            app:layout_row="1" />
-    </android.support.v7.widget.GridLayout>
+            <TextView
+                android:id="@+id/PuntoVentaGasListActivityTituloCantidad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cantidad_venta"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                app:layout_column="2"
+                app:layout_gravity="fill"
+                app:layout_row="1" />
+
+            <TextView
+                android:id="@+id/PuntoVentaGasListaActivityTipoGas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                app:layout_column="0"
+                app:layout_columnSpan="2"
+                app:layout_gravity="fill"
+                app:layout_row="1" />
+        </android.support.v7.widget.GridLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
