--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
@@ -204,10 +204,10 @@
                                                 <thead>
                                                     <tr>
                                                         <th>Rol</th>
-                                                        <th>CatInsertarUsuario</th>
-                                                        <th>CatModificarUsuario</th>
-                                                        <th>CatEliminarUsuario</th>
-                                                        <th>CatConsultarUsuario</th>
+                                                        <th>Insertar Usuario</th>
+                                                        <th>Modificar Usuario</th>
+                                                        <th>Eliminar Usuario</th>
+                                                        <th>Consultar Usua</th>
                                                         <th>CatInsertarProveedor</th>
                                                         <th>CatEliminarProveedor</th>
                                                         <th>CatConsultarProveedor</th>
@@ -262,7 +262,7 @@
                                     </div>
                                 </div>
                                 <div id="MovilCatalogo" class="tab-pane">
-                                    <i>MovilCatalogo interests go here</i>
+                                    <i>Movil Catalogo sin datos para mostrar</i>
                                 </div>
                             </div>
                             <!--Compra tab content-->
@@ -348,19 +348,19 @@
                             <!--ventas tab content-->
                             <div class="tab-content">
                                 <div id="SistemaVentas" class="tab-pane">
-                                    <i>SistemaVentas interests go here</i>
+                                    <i>Sistema Ventas sin datos para mostrar</i>
                                 </div>
                                 <div id="MovilVentas" class="tab-pane">
-                                    <i>MóvilVentas interests go here</i>
+                                    <i>Móvil Ventas sin datos para mostrar</i>
                                 </div>
                             </div>
                             <!--Inventario tab content-->
                             <div class="tab-content">
                                 <div id="SistemaInventario" class="tab-pane">
-                                    <i>SistemaInventario interests go here</i>
+                                    <i>Sistema Inventario sin datos para mostrar</i>
                                 </div>
                                 <div id="MovilInventario" class="tab-pane">
-                                    <i>MóvilInventario interests go here</i>
+                                    <i>Móvil Inventario sin datos para mostrar</i>
                                 </div>
                             </div>
                             <!--Requisicion tab content-->
@@ -394,7 +394,7 @@
                                     </div>
                                 </div>
                                 <div id="MovilRequsicion" class="tab-pane">
-                                    <i>MóvilRequsición interests go here</i>
+                                    <i>Móvil Requsición sin datos para mostrar</i>
                                 </div>
                             </div>
                             <!-- Tab panes -->
