--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Categoria.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Categoria.cshtml
@@ -151,9 +151,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row clearfix">
+                                <div class="row clearfix blockquote blockquote-info btn-round">
                                     <div class="table-responsive">
-                                        <table class="table table table-bordered table-striped table-hover js-basic-example dataTable filterable" name="RequisicionProductos">
+                                        <table class="table table-striped table-hover filterable" name="RequisicionProductos">
                                             <thead>
                                                 <tr>
                                                     <td><b>Nombre</b></td>
